test/scc/pp/errors/025.a
025.t:1:4: error: expected an expression